добавляет разметку хедера и блока промо главной страницы, подключает normalize.css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Sedona</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+      <header class="page-header">
+        <nav class="main-nav">
+          <a class="main-nav__logo">
+            <img class="main-nav__logo-img" src="img/logo.svg" alt="City of Sedona" width="140" height="72">
+          </a>
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Информация</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Фото и видео</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="#">Карта штата</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">Гостиницы</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <main class="main-content">
+        <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
 
+        <div class="promo">
+          <img class="promo-header" src="img/promo-welcome.svg" alt="Добро пожаловать в Седону" width="459" height="353">
+        </div>
+
+      </main>
+    </div>
   </body>
 </html>
