добавляет разметку и стилизацию блоков преимуществ

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="page-header">
         <nav class="main-nav">
           <a class="main-nav__logo">
-            <img class="main-nav__logo-img" src="img/logo.svg" alt="City of Sedona" width="140" height="72">
+            <img class="main-nav__logo-img" src="img/logo.svg" alt="Седона" width="140" height="72">
           </a>
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -31,12 +31,43 @@
         </nav>
       </header>
 
-      <main class="main-content">
+      <main class="page-main">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
 
         <div class="promo">
-          <img class="promo-header" src="img/promo-welcome.svg" alt="Добро пожаловать в Седону" width="459" height="353">
+          <img class="promo__header" src="img/promo-welcome.svg" alt="Добро пожаловать в Седону" width="459" height="353">
         </div>
+
+        <div class="intro">
+          <p class="intro__slogan">Седона — небольшой городок в Аризоне,<br> заслуживающий большего</p>
+          <p class="intro__propose">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        </div>
+
+        <section class="reasons">
+          <h2 class="reasons__header visually-hidden">Причины, почему Вы должы посетить Седону</h2>
+
+          <div class="reasons__item reason-row">
+            <div class="reason-row__wrapper">
+              <h3 class="reason-row__header">Настоящий<br> городок</h3>
+              <p class="reason-row__number">— №1 —</p>
+              <p class="reason-row__description">Седона — не аттракцион для туристов,<br> там течёт своя жизнь</p>
+            </div>
+            <img class="reason-row__img" src="img/reasons-city.jpg" alt="Настоящий городок" width="800" height="256">
+          </div>
+
+          <section class="reasons__item adventages"></section>
+
+          <div class="reasons__item reason-row reason-row--reverse">
+            <div class="reason-row__wrapper">
+              <h3 class="reason-row__header">Там есть<br> Мост Дьявола</h3>
+              <p class="reason-row__number">— №2 —</p>
+              <p class="reason-row__description">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+            </div>
+            <img class="reason-row__img" src="img/reasons-bridge.jpg" alt="Мост Дьявола" width="800" height="256">
+          </div>
+
+          <div class="reasons__item reason-columns"></div>
+        </section>
 
       </main>
     </div>
