добавляет разметку и стилизацию блока с рекомендациями

--- a/index.html
+++ b/index.html
@@ -55,7 +55,23 @@
             <img class="reason-row__img" src="img/reasons-city.jpg" alt="Настоящий городок" width="800" height="256">
           </div>
 
-          <section class="reasons__item adventages"></section>
+          <section class="reasons__item recommended">
+            <h2 class="recommended__header visually-hidden">Рекомендации для вашей поездки в Седону</h2>
+            <ul class="recommended__list">
+              <li class="recommended__item">
+                <h3 class="recommended__title">Жильё</h3>
+                <p class="recommended__advice">Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+              </li>
+              <li class="recommended__item">
+                <h3 class="recommended__title">Еда</h3>
+                <p class="recommended__advice">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+              </li>
+              <li class="recommended__item">
+                <h3 class="recommended__title">Сувениры</h3>
+                <p class="recommended__advice">Не только китайского, но и местного<br> производства!</p>
+              </li>
+            </ul>
+          </section>
 
           <div class="reasons__item reason-row reason-row--reverse">
             <div class="reason-row__wrapper">
