добавляет разметку и стилизацию блока преимуществ с колоночной сеткой

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="intro">
-          <p class="intro__slogan">Седона — небольшой городок в Аризоне,<br> заслуживающий большего</p>
+          <p class="intro__slogan">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
           <p class="intro__propose">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
         </div>
 
@@ -55,8 +55,7 @@
             <img class="reason-row__img" src="img/reasons-city.jpg" alt="Настоящий городок" width="800" height="256">
           </div>
 
-          <section class="reasons__item recommended">
-            <h2 class="recommended__header visually-hidden">Рекомендации для вашей поездки в Седону</h2>
+          <div class="reasons__item recommended">
             <ul class="recommended__list">
               <li class="recommended__item">
                 <h3 class="recommended__title">Жильё</h3>
@@ -71,7 +70,7 @@
                 <p class="recommended__advice">Не только китайского, но и местного<br> производства!</p>
               </li>
             </ul>
-          </section>
+          </div>
 
           <div class="reasons__item reason-row reason-row--reverse">
             <div class="reason-row__wrapper">
@@ -82,7 +81,25 @@
             <img class="reason-row__img" src="img/reasons-bridge.jpg" alt="Мост Дьявола" width="800" height="256">
           </div>
 
-          <div class="reasons__item reason-columns"></div>
+          <div class="reasons__item reason-columns">
+            <ul class="reason-columns__list">
+              <li class="reason-columns__item">
+                <h3 class="reason-columns__header">Небольшая площадь</h3>
+                <p class="reason-columns__number">— №3 —</p>
+                <p class="reason-columns__description">Все достопримечательности<br> находятся очень близко</p>
+              </li>
+              <li class="reason-columns__item">
+                <h3 class="reason-columns__header">Красивая дорога</h3>
+                <p class="reason-columns__number">— №4 —</p>
+                <p class="reason-columns__description">Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+              </li>
+              <li class="reason-columns__item">
+                <h3 class="reason-columns__header">Мало туристов</h3>
+                <p class="reason-columns__number">— №5 —</p>
+                <p class="reason-columns__description">Большинство едет в гранд каньон<br> и толпится там</p>
+              </li>
+            </ul>
+          </div>
         </section>
 
       </main>
