добавляет разметку и стилизацию блока поиска без формы

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
           </div>
         </section>
 
+        <div class="search">
+          <b class="search__slogan">Заинтересовались?</b>
+          <p class="search__offer">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в седоне</p>
+          <button class="search__btn" type="button" aria-label="Нажмите для поиска гостиницы в Седоне" ><span class="search__btn-text">Поиск гостиницы в Седоне</span></button>
+        </div>
+
       </main>
     </div>
   </body>
