--- a/index.html
+++ b/index.html
@@ -115,39 +115,76 @@
                   <label class="booking-form__date-label" for="date-arrival">Дата заезда:</label>
                   <div class="booking-form__date-wrapper">
                     <input class="booking-form__date-input" id="date-arrival" type="text" name="date-arrival" value="24 апреля 2017" aria-label="Введите дату заезда">
-                    <!--svg-->
+                    <svg class="booking-form__calendar_img" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
+                      <g id="calendar_1_">
+                        <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
+                        c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
+                        c-0.363,0-0.657,0.308-0.657,0.689v1.377H1.75C0.784,2.025,0,2.847,0,3.862v16.302C0,21.179,0.784,22,1.75,22h17.501
+                        C20.217,22,21,21.179,21,20.164V3.862C21,2.847,20.217,2.025,19.251,2.025z M19.688,20.164c0,0.253-0.195,0.459-0.437,0.459H1.75
+                        c-0.241,0-0.438-0.206-0.438-0.459V3.862c0-0.253,0.196-0.459,0.438-0.459h2.844v1.378c0,0.381,0.294,0.689,0.657,0.689
+                        c0.362,0,0.656-0.308,0.656-0.689V3.403h3.938v1.378c0,0.381,0.294,0.689,0.657,0.689c0.361,0,0.655-0.308,0.655-0.689V3.403h3.938
+                        v1.378c0,0.381,0.293,0.689,0.656,0.689c0.362,0,0.656-0.308,0.656-0.689V3.403h2.845c0.241,0,0.437,0.206,0.437,0.459V20.164z"/>
+                        <rect x="4.594" y="8.225" width="2.625" height="2.066"/>
+	                      <rect x="4.594" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="4.594" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="9.188" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="9.188" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="9.188" y="8.225" width="2.625" height="2.066"/>
+                        <rect x="13.781" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="13.781" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="booking-form__item">
                   <label class="booking-form__date-label" for="date-departure">Дата выезда:</label>
                   <div class="booking-form__date-wrapper">
                     <input class="booking-form__date-input" id="date-departure" type="text" name="date-departure" value="4 июля 2017" aria-label="Введите дату выезда">
-                    <!--svg-->
+                    <svg class="booking-form__calendar_img" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21px" height="22px" viewBox="0 0 21 22" enable-background="new 0 0 21 22" xml:space="preserve">
+                      <g id="calendar_1_">
+                        <path d="M19.251,2.025h-2.845V0.648c0-0.381-0.294-0.689-0.656-0.689c-0.363,0-0.656,0.308-0.656,0.689v1.377h-3.938V0.648
+                        c0-0.381-0.294-0.689-0.655-0.689c-0.363,0-0.657,0.308-0.657,0.689v1.377H5.906V0.648c0-0.381-0.294-0.689-0.656-0.689
+                        c-0.363,0-0.657,0.308-0.657,0.689v1.377H1.75C0.784,2.025,0,2.847,0,3.862v16.302C0,21.179,0.784,22,1.75,22h17.501
+                        C20.217,22,21,21.179,21,20.164V3.862C21,2.847,20.217,2.025,19.251,2.025z M19.688,20.164c0,0.253-0.195,0.459-0.437,0.459H1.75
+                        c-0.241,0-0.438-0.206-0.438-0.459V3.862c0-0.253,0.196-0.459,0.438-0.459h2.844v1.378c0,0.381,0.294,0.689,0.657,0.689
+                        c0.362,0,0.656-0.308,0.656-0.689V3.403h3.938v1.378c0,0.381,0.294,0.689,0.657,0.689c0.361,0,0.655-0.308,0.655-0.689V3.403h3.938
+                        v1.378c0,0.381,0.293,0.689,0.656,0.689c0.362,0,0.656-0.308,0.656-0.689V3.403h2.845c0.241,0,0.437,0.206,0.437,0.459V20.164z"/>
+                        <rect x="4.594" y="8.225" width="2.625" height="2.066"/>
+	                      <rect x="4.594" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="4.594" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="9.188" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="9.188" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="9.188" y="8.225" width="2.625" height="2.066"/>
+                        <rect x="13.781" y="15.112" width="2.625" height="2.066"/>
+                        <rect x="13.781" y="11.668" width="2.625" height="2.067"/>
+                        <rect x="13.781" y="8.225" width="2.625" height="2.066"/>
+                      </g>
+                    </svg>
                   </div>
                 </div>
                 <div class="booking-form__guests">
-                  <div class="booking-form__item">
-                    <label class="booking-form__number-label" for="adults"></label>
-                    <div class="booking-form__number-wrapper">
-                      <button class="booking-form__number-btn" type="button" aria-label="Уменьшить количество взрослых гостей">-</button>
+                  <div class="booking-form__item--guests">
+                    <label class="booking-form__number-label" for="adults">Взрослые:</label>
+                    <div class="booking-form__adults-wrapper">
+                      <button class="booking-form__number-btn decrease-btn" type="button" aria-label="Уменьшить количество взрослых гостей"></button>
                       <input class="booking-form__number-input" id="adults" type="text" name="adults" value="2" aria-label="Введите количество взрослых гостей">
-                      <button class="booking-form__number-btn" type="button" aria-label="Увеличить количество взрослых гостей">+</button>
+                      <button class="booking-form__number-btn increase-btn" type="button" aria-label="Увеличить количество взрослых гостей"></button>
                     </div>
                   </div>
-                  <div class="booking-form__item">
-                    <label class="booking-form__number-label" for="kids"></label>
-                    <div class="booking-form__number-wrapper">
-                      <button class="booking-form__number-btn" type="button" aria-label="Уменьшить количество детей">-</button>
+                  <div class="booking-form__item--guests">
+                    <label class="booking-form__number-label" for="kids">Дети:</label>
+                    <div class="booking-form__kids-wrapper">
+                      <button class="booking-form__number-btn decrease-btn" type="button" aria-label="Уменьшить количество детей"></button>
                       <input class="booking-form__number-input" id="kids" type="text" name="kids" value="0" aria-label="Введите количество детей">
-                      <button class="booking-form__number-btn" type="button" aria-label="Увеличить количество детей">+</button>
+                      <button class="booking-form__number-btn increase-btn" type="button" aria-label="Увеличить количество детей"></button>
                     </div>
                   </div>
                 </div>
-                <button class="booking-form__submit-btn" type="submit" aria-label="Найти гостиницу">Найти</button>
+                <button class="booking-form__submit-btn" type="submit" aria-label="Найти гостиницу"><span class="booking-form__submit-text">Найти</span></button>
               </form>
             </div>
           </div>
-
         </div>
 
       </main>
