добавляет разметку и стилизацию блока фильтров на странице каталога

--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
 
         <div class="map">
           <h2 class="map__header visually-hidden">Соединённые Штаты Америки, штат Аризона, Явапай-Каунти, Седона</h2>
-          <!-- <iframe class="map__interactive" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae12bdf90c14dad31bc16ed3ee3b89321c901965c23082548570f4dd77a225eb6&amp;source=constructor" width="100%" height="593"></iframe> -->
+          <iframe class="map__interactive" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae12bdf90c14dad31bc16ed3ee3b89321c901965c23082548570f4dd77a225eb6&amp;source=constructor" width="1200" height="593"></iframe>
         </div>
       </main>
 
-      <footer class="page-footer">
+      <footer class="page-footer page-footer--index">
         <div class="hashtag">
           <b class="hashtag__text">#Visitsedona</b>
         </div>
