--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
               <a class="site-list__link" href="#">Карта штата</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="catalog.html">Гостиницы</a>
+              <a class="site-list__link site-list__link--current" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
         </nav>
@@ -90,6 +90,31 @@
             </div>
           </form>
         </section>
+
+        <div class="sort">
+          <h2 class="sort__header visually-hidden">Параметры сортировки результатов поиска</h2>
+          <p class="sort__founded">Найдено: 3</p>
+          <p class="sort__title">Сортировка:</p>
+          <ul class="sort__list breadcrumbs">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">По цене</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">По типу</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">По рейтингу</a>
+            </li>
+          </ul>
+          <ul class="sort__view-list view-by">
+            <li class="view-by__item">
+              <a class="view-by__link view-by__link--up" href="#" aria-label="Сортировать по возрастанию цены"></a>
+            </li>
+            <li class="view-by__item">
+              <a class="view-by__link view-by__link--down" href="#" aria-label="Сортировать по убыванию цены"></a>
+            </li>
+          </ul>
+        </div>
       </main>
 
       <footer class="page-footer">
