добавляет разметку и стилизацию карточек с результатами поиска на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -97,7 +97,7 @@
           <p class="sort__title">Сортировка:</p>
           <ul class="sort__list breadcrumbs">
             <li class="breadcrumbs__item">
-              <a class="breadcrumbs__link" href="#">По цене</a>
+              <a class="breadcrumbs__link breadcrumbs__link-current" href="#">По цене</a>
             </li>
             <li class="breadcrumbs__item">
               <a class="breadcrumbs__link" href="#">По типу</a>
@@ -115,6 +115,87 @@
             </li>
           </ul>
         </div>
+
+        <section class="search-results">
+          <h2 class="search-results__header visually-hidden">Результаты поиска жилья</h2>
+          <ul class="search-results__list catalog">
+            <li class="catalog__item">
+              <article class="catalog__item-description hotel-card">
+                <h3 class="catalog__item-header visually-hidden">Amara Resort & Spa</h3>
+                <img class="hotel-card__img" src="img/catalog-amara.jpg" alt="Amara Resort & Spa" width="135" height="90">
+                <div class="hotel-card__info">
+                  <p class="hotel-card__title">Amara Resort & Spa</p>
+                  <div class="hotel-card__price-wrapper">
+                    <span class="hotel-card__hotel-type">Гостиница</span>
+                    <span class="hotel-card__price">От 4000 Р.</span>
+                  </div>
+                  <div class="hotel-card__btn-wrapper">
+                    <a class="hotel-card__details-btn" href="#">Подробнее</a>
+                    <a class="hotel-card__booking-btn" href="#">Забронировать</a>
+                  </div>
+                </div>
+                <div class="hotel-card__rating-wrapper">
+                  <p class="hotel-card__all-stars">
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                  </p>
+                  <span class="hotel-card__rating">Рейтинг: 8,5</span>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__item">
+              <article class="catalog__item-description hotel-card">
+                <h3 class="catalog__item-header visually-hidden">Desert Quail Inn</h3>
+                <img class="hotel-card__img" src="img/catalog-desert.jpg" alt="Desert Quail Inn" width="135" height="90">
+                <div class="hotel-card__info">
+                  <p class="hotel-card__title">Desert Quail Inn</p>
+                  <div class="hotel-card__price-wrapper">
+                    <span class="hotel-card__hotel-type">Мотель</span>
+                    <span class="hotel-card__price">От 3000 Р.</span>
+                  </div>
+                  <div class="hotel-card__btn-wrapper">
+                    <a class="hotel-card__details-btn" href="#">Подробнее</a>
+                    <a class="hotel-card__booking-btn" href="#">Забронировать</a>
+                  </div>
+                </div>
+                <div class="hotel-card__rating-wrapper">
+                  <p class="hotel-card__all-stars">
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                  </p>
+                  <span class="hotel-card__rating">Рейтинг: 8,9</span>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__item">
+              <article class="catalog__item-description hotel-card">
+                <h3 class="catalog__item-header visually-hidden">Villas at Poco Diablo</h3>
+                <img class="hotel-card__img" src="img/catalog-villas.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+                <div class="hotel-card__info">
+                  <p class="hotel-card__title">Villas at Poco Diablo</p>
+                  <div class="hotel-card__price-wrapper">
+                    <span class="hotel-card__hotel-type">Апартаменты</span>
+                    <span class="hotel-card__price">От 2000 Р.</span>
+                  </div>
+                  <div class="hotel-card__btn-wrapper">
+                    <a class="hotel-card__details-btn" href="#">Подробнее</a>
+                    <a class="hotel-card__booking-btn" href="#">Забронировать</a>
+                  </div>
+                </div>
+                <div class="hotel-card__rating-wrapper">
+                  <p class="hotel-card__all-stars">
+                    <span class="hotel-card__star"></span>
+                    <span class="hotel-card__star"></span>
+                  </p>
+                  <span class="hotel-card__rating">Рейтинг: 9,2</span>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </section>
       </main>
 
       <footer class="page-footer">
