--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Sedona</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -108,7 +108,7 @@
           <div class="search__btn-wrapper">
             <button class="search__btn" type="button" aria-label="Нажмите для поиска гостиницы в Седоне" ><span class="search__btn-text">Поиск гостиницы в Седоне</span></button>
 
-            <div class="search__form-wrapper">
+            <div class="search__form-wrapper show">
               <h2 class="search__form__header visually-hidden">Введите параметры поиска гостиницы</h2>
               <form class="search__form booking-form" action="https://echo.htmlacademy.ru" method="post">
                 <div class="booking-form__item">
@@ -235,5 +235,7 @@
         </div>
       </footer>
     </div>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
