--- a/index.html
+++ b/index.html
@@ -236,6 +236,6 @@
       </footer>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
