исправляет замечания по критериям Б4 и Б11

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Sedona</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.min.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -39,8 +39,10 @@
         </div>
 
         <div class="intro">
-          <p class="intro__slogan">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
-          <p class="intro__propose">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          <div class="intro__wrapper">
+            <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+            <p class="intro__propose">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          </div>
         </div>
 
         <section class="reasons">
@@ -48,9 +50,9 @@
 
           <div class="reasons__item reason-row">
             <div class="reason-row__wrapper">
-              <h3 class="reason-row__header">Настоящий<br> городок</h3>
+              <h3 class="reason-row__header">Настоящий городок</h3>
               <p class="reason-row__number">— №1 —</p>
-              <p class="reason-row__description">Седона — не аттракцион для туристов,<br> там течёт своя жизнь</p>
+              <p class="reason-row__description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <img class="reason-row__img" src="img/reasons-city.jpg" alt="Настоящий городок" width="800" height="256">
           </div>
@@ -59,15 +61,15 @@
             <ul class="recommended__list">
               <li class="recommended__item">
                 <h3 class="recommended__title">Жильё</h3>
-                <p class="recommended__advice">Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
+                <p class="recommended__advice">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li class="recommended__item">
                 <h3 class="recommended__title">Еда</h3>
-                <p class="recommended__advice">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
+                <p class="recommended__advice">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li class="recommended__item">
                 <h3 class="recommended__title">Сувениры</h3>
-                <p class="recommended__advice">Не только китайского, но и местного<br> производства!</p>
+                <p class="recommended__advice">Не только китайского, но и местного производства!</p>
               </li>
             </ul>
           </div>
@@ -86,12 +88,12 @@
               <li class="reason-columns__item">
                 <h3 class="reason-columns__header">Небольшая площадь</h3>
                 <p class="reason-columns__number">— №3 —</p>
-                <p class="reason-columns__description">Все достопримечательности<br> находятся очень близко</p>
+                <p class="reason-columns__description">Все достопримечательности находятся очень близко</p>
               </li>
               <li class="reason-columns__item">
                 <h3 class="reason-columns__header">Красивая дорога</h3>
                 <p class="reason-columns__number">— №4 —</p>
-                <p class="reason-columns__description">Ехать в Седону из Лас-Вегаса совсем<br> не скучно!</p>
+                <p class="reason-columns__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="reason-columns__item">
                 <h3 class="reason-columns__header">Мало туристов</h3>
