исправляет замечания по критерию Д19

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 
           <div class="reasons__item recommended">
             <ul class="recommended__list">
-              <li class="recommended__item">
+              <li class="recommended__item recommended__item--estate-bg">
                 <h3 class="recommended__title">Жильё</h3>
                 <p class="recommended__advice">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
-              <li class="recommended__item">
+              <li class="recommended__item recommended__item--food-bg">
                 <h3 class="recommended__title">Еда</h3>
                 <p class="recommended__advice">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="recommended__item">
+              <li class="recommended__item recommended__item--gift-bg">
                 <h3 class="recommended__title">Сувениры</h3>
                 <p class="recommended__advice">Не только китайского, но и местного производства!</p>
               </li>
